Bug 3220 - lket-b2a handles missing files badly
Summary: lket-b2a handles missing files badly
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-09-17 18:49 UTC by Eugeniy Meshcheryakov
Modified: 2006-09-18 20:58 UTC (History)
0 users

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments
patch (188 bytes, patch)
2006-09-17 18:50 UTC, Eugeniy Meshcheryakov
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eugeniy Meshcheryakov 2006-09-17 18:49:29 UTC
% lket-b2a --help
Unable to open --help

(process:10069): GLib-CRITICAL **: g_tree_destroy: assertion `tree != NULL' failed
Comment 1 Eugeniy Meshcheryakov 2006-09-17 18:50:39 UTC
Created attachment 1304 [details]
patch
Comment 2 Josh Stone 2006-09-18 20:58:36 UTC
committed, lket_b2a.c r1.11