2006-09-18  Josh Stone  <joshua.i.stone@intel.com>

PR 3220
	From Eugeniy Meshcheryakov <eugen@debian.org>:
	* lket/b2a/lket_b2a.c: Check that appNameTree exists before destroying.